[package]
name = "dimmac"
version = "0.1.0"
edition = "2021"
description = "Macros to generate usize values for indexing data structures"
license = "MIT OR Apache-2.0"
authors = [
    "Taennan taennan@zohomail.com"
]
repository = ""
exclude = [".idea", ".git", ".gitignore", "CHANGELOG.md"]

keywords = ["multidimensional", "macros"]
categories = ["no_std", "rust_patterns"]
