[package]
name = "axmac"
version = "0.1.0"
edition = "2021"
description = "Readable indexing macros for 1-4 dimensional data structures"
license = "MIT OR Apache-2.0"
authors = [
    "Taennan taennan@zohomail.com"
]
repository = "https://github.com/taennan/axmac"

exclude = [".idea", ".git", ".gitignore", "CHANGELOG.md"]

keywords = ["multidimensional", "macros"]
categories = ["no_std", "rust_patterns"]
